# config/constants.js
@@ -13,6 +13,7 @@ module.exports = {
 	"ARTWORK_REF_NUMBER": "ArtWorkRefNumber",
 	"CONDITION_REPORT_NUMBER": "ConditionReportNumber",
 	"TRANSACTION_ID": "TransactionId",
+	"REQUEST_ID" : "requestId",
 	"MORTGAGE_NUMBER":"mortgageNumber",
 	"UNIQUE_LOAN_ID" : "uniqueLoanId",
 	"ADD_ART_IMAGE": "addArtImage",
@@ -201,6 +202,7 @@ module.exports = {
 	"IRM" : "Irm",
 	"LIST_UNMATCHED_NOTICES" : "listUnmatchedNotices",
 	"DOWNLOAD_UNMATCHED_NOTICES" : "downloadUnmatchedNotices",
+	"DOWNLOAD_IPLETTERS_BY_BANK" : "downloadIpLettersByBank",
 	"IP_NOTICES_SUMMARY" : "ipNoticesSummary",
 	"GET_ARTWORK_DETAILS": "getArtWorkDetails",
 	"GET_ALL_ARTWORK": "getAllArtWork",
